src/main/resources/k8s/prueba-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prueba-kubernete
  labels:
    app: prueba-kubernete
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prueba-kubernete
  template:
    metadata:
      labels:
        app: prueba-kubernete
    spec:
      containers:
      - name: prueba-kubernete
        image: motta1616/prueba-kubernete:1.7.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "300m"
