src/main/resources/k8s/prueba-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prueba-kubernete
spec:
  selector:
    app: prueba-kubernete
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
